# fastsl

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  PROGRESS.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
frontend_dist/: index.html
frontend_dist/assets/: ChartPage-9qKrzHXc.js  ChartsView-CrSE40M7.js  EnvHardware-LY0RbVQ_.js  EnvIndex-B2latrzK.js  EnvRequirements-Dt7_zRju.js  EnvironmentPage-DU8bfwDy.js  ExperimentView-XrQ3vTya.js  FuncBar-2pqWshjU.js  HelpView-C6YLZvjw.js  HomeView-UgN-BBAV.js  IndexPage-BdPmDWzb.js  LogPage-Bhtmme4m.js  NotFound-CHRWfCgl.js  SLLoading-Bxwot5zb.js  SLStatusLabel-UMMTYpkg.js  chart-D2FRC8nm.js  experiment-D-O345Pv.js  index-Ddq0Tbiq.js  index-E9zZbrqx.css  parser-BreaZQOy.js
src/: api.rs  api_fastsl.rs  db.rs  main.rs  resp.rs  summary_cache.rs  uistate.rs
tests/: dump_golden.py
