[package]
name = "fastsl"
version = "0.1.0"
edition = "2021"
description = "Fast, lightweight read-only viewer for SwanLab local logs (swanboard-API compatible)"

[[bin]]
name = "fastsl"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs"] }
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
moka = { version = "0.12", features = ["sync"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
notify = "8"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
