[package]
name = "fastsl"
version = "0.2.0"
edition = "2021"
description = "Fast, lightweight read-only viewer for SwanLab local logs (swanboard-API compatible)"
license = "Apache-2.0"
repository = "https://github.com/Golden-Pigeon/fastsl"
homepage = "https://github.com/Golden-Pigeon/fastsl"
readme = "README.md"
keywords = ["swanlab", "dashboard", "viewer", "visualization", "cli"]
categories = ["command-line-utilities", "visualization"]
include = ["src/**/*", "frontend_dist/**/*", "build.rs", "Cargo.toml", "LICENSE", "NOTICE", "README.md"]

# Lets `cargo binstall fastsl` fetch the prebuilt binaries from GitHub Releases
# (matches the archive naming produced by .github/workflows/release.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[[bin]]
name = "fastsl"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs"] }
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
moka = { version = "0.12", features = ["sync"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
notify = "8"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
